fix:dark mode ui 수정 & simple tooltip 적용

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,6 +111,30 @@ body,
   @apply text-neutral-600 dark:text-neutral-300;
 }
 
+
+[data-tooltip] {
+  position: relative;
+}
+
+[data-tooltip]::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  top: 35px; /* 툴팁 위치 조정 */
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: black;
+  color: white;
+  padding: 4px 8px;
+  border-radius: 4px;
+  white-space: nowrap;
+  font-size: 14px;
+  display: none;
+}
+
+[data-tooltip]:hover::after {
+  display: block;
+}
+
 nav {
   flex-wrap: wrap;
   line-height: 1.5em;
